--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
     <head>
-
+        <title>Sebastian de Rzewuski</title>
     </head>
     <body>
-        <a href="Single/">Single Page</a>
-        <a href="Double/">Double Page</a>
+        <div>
+            <a href="Single/index.html">Single Page</a>
+        </div>
+        <div>
+            <a href="Double/index.html">Double Page</a>
+        </div>
     </body>
 </html>
